# CppStreamBuffer

./: ByteArray.h  CMakeLists.txt  CppStreamBuffer.hpp  LICENSE  Main.cpp  README.md  test.cpp
tests/: CMakeLists.txt  Main.cpp
